Tools/sonar/40-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: sonarqube
spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      securityContext:
        fsGroup: 999

      containers:
      - name: postgres
        image: postgres:15
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 5432

        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data

      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
